--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,51 @@
 <!DOCTYPE html>
+<html lang="en-us">
+
+<head>
+
+    <meta charset="UTF-8"> 
+    <title>Bootstrap Portfolio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+
+</head>
+
+<body>
+
+<nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Zaria Mateen</a> 
+             
+    <ul class="nav">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">About</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Portfolio</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Contact</a>
+        </li>
+    </ul>
+</nav>
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8">
+        <h1>Contact Me</h1>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="column">
+            <form action="/action_page.php">
+                <label form="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your Name..">
+                <label form="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname" placeholder="Your last Name..">
+                <label form="email">Email</label>
+                <input type="text" id="email" name="email" placeholder="Your Email..">
+            </form>
+        </div>
+    </div>
+</div> 
+
+</body>
