--- a/index.html
+++ b/index.html
@@ -11,20 +11,11 @@
 
 <body>
    <nav class="navbar navbar-dark bg-dark">
-       <a class="navbar-brand" href="#">Zaria Mateen</a> 
-    
-    <ul class="nav">
-        <li class="nav-item">
-            <a class="nav-link active" href="#">About</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="#">Portfolio</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="#">Contact</a>
-        </li>
-    </ul>
-   </nav>
+    <a class="navbar-brand" href="#">Zaria Mateen</a> 
+    <a href="index.html">About Me</a>
+    <a href="contact.html">Contact</a>
+    <a href="portfolio.html">Portfolio</a>
+    </nav>
    
    <br>
 
